# webhook-relay

webhook-relay/: ARCHITECTURE.md  Dockerfile  LEARNING_LOG.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
webhook-relay/alembic/: env.py
webhook-relay/app/: config.py  main.py
webhook-relay/app/models/: event.py  source.py
webhook-relay/app/routes/: inbound.py  sources.py
webhook-relay/tests/: conftest.py  test_week1.py
